Bug 433511 - Invisible extension menus in Firefox Nightly 88
Summary: Invisible extension menus in Firefox Nightly 88
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.21.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2021-02-23 21:22 UTC by Seqularise
Modified: 2021-02-24 08:31 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Seqularise 2021-02-23 21:22:41 UTC
SUMMARY
Firefox extension menus are invisible in wayland session

STEPS TO REPRODUCE
1.start plasma-wayland with MOZ_ENABLE_WAYLAND=1 env 
2. start firefox-nightly and click on extension button

OBSERVED RESULT
extension menu are opened but cannot be seen, can be clicked 

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version:5.21
KDE Frameworks Version:5.79 
Qt Version: 5.15.2

Additional Information
Vlad reproduced this in kwin from git
Comment 1 Bug Janitor Service 2021-02-24 08:26:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/732
Comment 2 Vlad Zahorodnii 2021-02-24 08:31:07 UTC
Git commit e1279e516c009911eefedd4a6e4e84be926ba051 by Vlad Zahorodnii.
Committed on 24/02/2021 at 08:25.
Pushed by vladz into branch 'master'.

wayland: Track already existing subsurfaces in SubSurfaceMonitor

When the monitor is created, the surface may already have child
sub-surfaces. The childSubSurfaceAdded signal won't be emitted for them,
we need to handle this case explicitly.
FIXED-IN: 5.21.2

M  +5    -0    src/subsurfacemonitor.cpp

https://invent.kde.org/plasma/kwin/commit/e1279e516c009911eefedd4a6e4e84be926ba051
Comment 3 Vlad Zahorodnii 2021-02-24 08:31:38 UTC
Git commit 85d6715b3b6d29ca88647ba3bea85e6ee3c630b9 by Vlad Zahorodnii.
Committed on 24/02/2021 at 08:31.
Pushed by vladz into branch 'Plasma/5.21'.

wayland: Track already existing subsurfaces in SubSurfaceMonitor

When the monitor is created, the surface may already have child
sub-surfaces. The childSubSurfaceAdded signal won't be emitted for them,
we need to handle this case explicitly.
FIXED-IN: 5.21.2


(cherry picked from commit e1279e516c009911eefedd4a6e4e84be926ba051)

M  +5    -0    subsurfacemonitor.cpp

https://invent.kde.org/plasma/kwin/commit/85d6715b3b6d29ca88647ba3bea85e6ee3c630b9